# Prompt-Guided-Diffusion

./: .gitignore  GPUtest.py  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
configs/: default.yaml
results/: baseline_reconstruction_metrics.txt  clap_baseline_bass_000002_cond.txt  clap_baseline_cond.txt  clap_baseline_reverb_000002_uncond.txt  clap_baseline_slowdown_000002_uncond.txt  clap_baseline_uncond.txt  clap_diffusion_cond.txt  clap_diffusion_increaseBPM_000002.txt  clap_diffusion_slowdown_000002.txt  prompt_effect_baseline.txt
results/CLAP_baseline_scores/: clap_baseline_bass_000002_uncond.txt  clap_baseline_cond.txt  clap_baseline_distortion_000002_cond.txt  clap_baseline_distortion_000002_uncond.txt  clap_baseline_increaseBPM_000002_cond.txt  clap_baseline_increaseBPM_000002_uncond.txt  clap_baseline_reverb_000002_cond.txt  clap_baseline_slowdown.txt  clap_baseline_slowdown_000002_cond.txt
results/CLAP_diffusion_scores/: clap_diffusion_bass_000002.txt  clap_diffusion_distortion_000002.txt  clap_diffusion_reverb_000002.txt
scripts/: plot_clap_bars.py  plot_mels.py  prepare_datasets.py  preprocess.py  preprocess_hifigan_mels.py  test_hifigan_from_mel.py
src/: compare_cond_uncond.py  infer.py  infer_diffusion.py  train.py  train_diffusion.py  train_diffusion_hifigan.py  train_uncond.py  utils_logging.py
src/audio/: utils.py
src/diffusion/: scheduler.py
src/eval/: eval_clap.py  eval_prompt_effect.py  eval_reconstruction.py  metrics.py  report_figures.py
src/models/: audio_encoder.py  text_encoder.py  unet_conditioned.py  (+1 more)
(+4 files in other folders)
